<resources>
    <string name="app_name">莱西</string>
    <string name="app_ver">1.0</string>

    <string name="txt_login_title">用户登录</string>
    <string name="please_input_user_name">请输入用户名</string>
    <string name="please_input_password">请输入密码</string>
    <string name="txt_login">登录</string>
    <string name="txt_remember_password">记住密码</string>
    <string name="txt_change_password">修改密码</string>

    <string name="txt_project">工程</string>
    <string name="txt_default_project">默认工程</string>
    <string name="txt_default_project_name">JZDATA</string>
    <string name="txt_layer_data">图层数据</string>
    <string name="txt_map">地图</string>
    <string name="txt_layer">图层</string>
    <string name="txt_query">查询</string>
    <string name="txt_analyst">分析</string>
    <string name="txt_setting">设置</string>
    <string name="txt_x_coord">x坐标：</string>
    <string name="txt_y_coord">y坐标：</string>

    <string name="txt_draw_layer">绘制图层</string>
    <string name="txt_project_manager">工程管理</string>
    <string name="txt_media">多媒体</string>
    <string name="txt_transparent">透明度</string>
    <string name="txt_track">轨迹</string>
    <string name="txt_rolling">漫游</string>
    <string name="txt_clear_mark">清除</string>
    <string name="txt_cancel_choose">取消选择</string>
    <string name="txt_attr_brush">属性刷</string>
    <string name="txt_code_brush">编码刷</string>

    <string name="txt_all_map">全图</string>
    <string name="txt_current_location">当前位置</string>
    <string name="txt_location">定位</string>

    <string name="txt_choose">选择</string>
    <string name="txt_single_selection">单选</string>
    <string name="txt_multi_selection">多选</string>
    <string name="txt_draw">绘制</string>
    <string name="txt_makepoint_gps">GPS采点</string>
    <string name="txt_makepoint_cont">连续采点</string>
    <string name="txt_makepoint_cross">十字采点</string>
    <string name="txt_makepoint_xy">坐标采点</string>
    <string name="txt_make_surface">画面</string>
    <string name="txt_make_freehand_polygon">流状面</string>
    <string name="txt_done_draw">完成确认</string>
    <string name="txt_cancel_draw">取消</string>
    <string name="txt_point_cancel">撤销</string>
    <string name="txt_point_recover">恢复</string>
    <string name="txt_tools">工具</string>
    <string name="txt_screenshot">截图</string>
    <string name="txt_screenshot_manager">截图管理</string>
    <string name="txt_copy_feature">图形复制</string>
    <string name="txt_get_xy">坐标查询</string>
    <string name="txt_distance">距离</string>
    <string name="txt_area">面积</string>
    <string name="txt_point_edit">节点编辑</string>
    <string name="txt_get_color">颜色拾取</string>

    <string name="txt_confirm">确认</string>
    <string name="txt_cancel">取消</string>

    <string name="txt_shp_manager">矢量图层管理</string>
    <string name="txt_tpk_manager">栅格地图管理</string>
    <style name="txt_choose_file">选择文件</style>
    <string name="txt_add">添加</string>
    <string name="txt_coord">坐标系</string>
    <string name="txt_visibility">是否显示</string>
    <string name="txt_visible">可见</string>
    <string name="txt_editable">编辑</string>
    <string name="txt_zoom">缩放</string>
    <string name="txt_attr">属性</string>
    <string name="txt_render">渲染</string>
    <string name="txt_remove">移除</string>
    <string name="txt_thumbnail">缩略图</string>
    <string name="txt_archives">档案</string>
    <string name="txt_archives_detail">档案详情</string>
    <string name="txt_archives_history">档案历史记录</string>
    <string name="txt_field_name">字段名</string>
    <string name="txt_field_alias">字段别名</string>
    <string name="txt_field_type">字段类型</string>
    <string name="txt_create_time">创建时间</string>
    <string name="txt_update_time">修改时间</string>

    <string name="txt_layer_attr_info">图层属性信息</string>
    <string name="txt_layer_opacity">图层透明度</string>
    <string name="txt_layer_label_info">图层标注信息</string>
    <string name="tip_max_3_label_field">标注最多显示三个字段</string>

    <string name="txt_choose_file">选择文件</string>
    <string name="txt_query_statistics">查询统计</string>
    <string name="txt_compare_analyst">比对分析</string>

    <string name="txt_simple_search">简单查询</string>
    <string name="txt_condition_search">条件查询</string>
    <string name="txt_layer_manager">图层管理</string>
    <string name="txt_visible_fields">显示字段</string>
    <string name="txt_fields">字段</string>
    <string name="txt_operate">操作符</string>
    <string name="txt_range">值域</string>
    <string name="please_select_layer">请选择图层</string>
    <string name="please_select_visible_fields">请选择显示字段</string>
    <string name="please_select_fields">请选择字段</string>
    <string name="please_select_operate">请选择操作符</string>
    <string name="please_select_range">请选择值域</string>
    <string name="tip_multiselect_up_to_6">最多选择六个显示字段</string>
    <string name="tip_range_cant_be_null">值域不允许为空</string>

    <string name="txt_search_result">查询结果</string>
    <string name="tip_min_1_result">最少要选中一个搜索结果</string>
    <string name="txt_search">查询</string>

    <string name="txt_data_edit">数据编辑</string>
    <string name="txt_data_delete">数据删除</string>
    <string name="txt_data_export">数据导出</string>
    <string name="txt_location_to_map">定位到地图</string>

    <string name="txt_loaded_empty">数据为空</string>

    <string name="txt_base_layer">基础图层</string>
    <string name="please_select_base_layer">请选择基础图层</string>
    <string name="txt_compare_layer">比对图层</string>
    <string name="please_select_compare_layer">请选择比对图层</string>
    <string name="txt_compare_type">比对类型</string>
    <string name="please_select_compare_type">请选择比对类型</string>
    <string name="tip_only_support_base_layer_is_supply">当前仅支持基础图层为供地</string>
    <string name="tip_only_support_compare_layer_is_disposal">当前仅支持比对图层为批地</string>
    <string name="txt_compare_result">比对结果</string>

    <string name="txt_camera">照片</string>
    <string name="txt_video">视频</string>
    <string name="txt_record">声音</string>
    <string name="txt_draw_free">绘图</string>

    <string name="txt_media_camera">拍摄照片</string>
    <string name="txt_media_record">录制声音</string>
    <string name="txt_media_video">录制视频</string>
    <string name="txt_media_draw">绘制草图</string>

    <string name="txt_draw_pen_size">笔触尺寸</string>
    <string name="txt_draw_pen_color">笔触颜色</string>
    <string name="txt_clear">清除</string>
    <string name="txt_recover">恢复</string>
    <string name="txt_save">保存</string>
    <string name="txt_draw_cancel">撤销</string>

    <!-- 设置界面 -->
    <string name="title_app_name">App名称</string>
    <string name="title_version_code">版本号</string>
    <string name="title_copyright">版权所有</string>
    <string name="hit_company">山东正元数字城市建设有限公司</string>
    <string name="title_org_site">官方网站</string>
    <string name="hit_org_site">http://www.zydcc.com/</string>
    <string name="title_it_support">技术支持</string>
    <string name="hint_it_support_phone">(0535)-8206275 8206266</string>
    <string name="title_register_state">激活状态</string>
    <string name="hint_no_register">未激活</string>
    <string name="txt_setting_sysgps">系统定位设置</string>
    <string name="txt_location_service">定位服务</string>
    <string name="txt_bluetooth_device">蓝牙设备</string>
    <string name="txt_no_connected">未连接</string>
    <string name="txt_difference_mode">差分数据解析方式</string>
    <string name="txt_difference_state">连接状态</string>
    <string name="txt_difference_pwd">差分密码</string>
    <string name="please_input_pwd">输入密码</string>
    <string name="txt_different_url">NTRIP地址</string>
    <string name="please_input_ip">输入IP地址</string>
    <string name="txt_difference_port">NTRIP端口</string>
    <string name="please_input_port">输入端口</string>
    <string name="txt_difference_account">差分账号</string>
    <string name="please_input_different_account">输入差分账号</string>
    <string name="txt_camara_field">拍照字段</string>
    <string name="txt_diffrence_setting">差分设置</string>
    <string name="txt_coordinate_sys">坐标系统</string>
    <string name="txt_layer_temp">图层模板</string>
    <string name="txt_inquiry_grid">调查表格</string>
    <string name="txt_about_us">关于我们</string>
    <string name="txt_getpoint">连续采点</string>
    <string name="txt_gps_setting">GPS设置</string>
    <string name="txt_coord_xy">XY坐标</string>
    <string name="txt_lon_lati">经纬度</string>
    <string name="txt_time">时间</string>
    <string name="txt_direct">方向</string>

    <string name="txt_import_project">导入工程</string>
    <string name="txt_export_project">导出工程</string>
    <string name="txt_new_project">新建工程</string>
    <string name="txt_new_layer">新建图层</string>
    <string name="txt_current_project">当前工程</string>
    <string name="txt_choose_layer">选择图层</string>
    <string name="txt_project_path">工程路径</string>
    <string name="txt_create_user">责任人：</string>
    <string name="txt_default_username">admin</string>
    <string name="txt_project_list">工程列表</string>
    <string name="txt_project_info">工程信息</string>

    <string name="txt_open">打开</string>
    <string name="txt_delete">删除</string>
    <string name="txt_export">导出</string>
    <string name="txt_excel">调查表</string>
    <string name="txt_project_name">工程名称</string>
    <string name="txt_project_base_info">工程概况</string>
    <string name="txt_project_sd_path">存储路径</string>
    <string name="txt_project_progress">工程进度</string>
    <string name="txt_layer_type">要素类型</string>
    <string name="txt_feature_num">要素数目</string>
    <string name="txt_label_field">标注内容</string>
    <string name="txt_line_color">边线颜色</string>
    <string name="txt_fill_color">填充颜色</string>
    <string name="txt_show_label">显示标注</string>
    <string name="txt_label_color">标注颜色</string>
    <string name="hint_default_show_label">默认（点击选择标注）</string>


</resources>
