<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="callback"
            type="com.zydcc.zrdc.view.LayerFragment.Callback" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_tpk_manager"
                android:layout_toStartOf="@id/btn_add_tpk"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/textsize_big" />
            <TextView
                android:id="@+id/btn_add_tpk"
                android:text="@string/txt_add"
                android:layout_alignParentEnd="true"
                style="@style/btn_other"
                android:onClick="@{()->callback.addTpk()}"
                />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white_translucent_dark"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:text="@string/txt_layer_manager"
                android:layout_weight="1"
                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="3">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/txt_visibility"/>
            </LinearLayout>
            <RadioGroup
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="3">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/txt_thumbnail"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/txt_zoom"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/txt_remove"/>
            </RadioGroup>
        </LinearLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:background="@color/white_translucent_dark" />


    </LinearLayout>
</layout>