<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="callback"
            type="com.zydcc.zrdc.ui.mapmode.Map" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.esri.arcgisruntime.mapping.view.MapView
            android:id ="@+id/map_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_normal"
            android:orientation="horizontal"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <RadioButton
                android:id="@+id/rb_draw_layer"
                style="@style/rb_bottombar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/rb_draw_layer"
                android:text="@string/txt_draw_layer" />

            <RadioButton
                style="@style/rb_bottombar"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:drawableTop="@drawable/rb_media"
                android:text="@string/txt_media"
                 />

            <RadioButton
                android:id="@+id/rb_transparent"
                style="@style/rb_bottombar"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:drawableTop="@drawable/rb_transparent"
                android:text="@string/txt_transparent"
                />

            <RadioButton
                android:id="@+id/rb_clear"
                style="@style/rb_bottombar"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:drawableTop="@drawable/rb_clear_mark"
                android:text="@string/txt_clear_mark" />

            <RadioButton
                android:id="@+id/rb_cancel_select"
                style="@style/rb_bottombar"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:drawableTop="@drawable/rb_cancelchoose"
                android:text="@string/txt_cancel_select" />

            <RadioButton
                android:id="@+id/rb_all_map"
                style="@style/rb_bottombar"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:drawableTop="@drawable/rb_allmap"
                android:text="@string/txt_all_map" />

            <RadioButton
                android:id="@+id/rb_location"
                style="@style/rb_bottombar"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:drawableTop="@drawable/rb_location"
                android:text="@string/txt_location"
                android:onClick="@{() -> callback.onLocation()}"
                 />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>