<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="callback"
            type="com.zydcc.zrdc.view.LayerFragment.Callback" />
    </data>
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_marginBottom="1px">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/btn_add_shp"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/textsize_big"
                android:text="@string/txt_shp_manager"/>
            <TextView
                android:id="@+id/btn_add_shp"
                style="@style/btn_other"
                android:text="@string/txt_add"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:onClick="@{() -> callback.addShp()}"
                />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:background="@color/white"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:text="@string/txt_layer_manager"
                android:layout_weight="4"
                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="3">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/txt_thumbnail"
                    tools:ignore="NestedWeights"
                    android:visibility="invisible"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/txt_attr"
                    tools:ignore="NestedWeights" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/txt_remove"/>
            </LinearLayout>

        </LinearLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:background="@color/white_translucent_dark"
            />
    </LinearLayout>
</layout>